# Aicecream

./: Cargo.toml  Dockerfile  README.md  config.yaml
helm/galato/: Chart.yaml  values.yaml
helm/galato/templates/: _helpers.tpl  configmap.yaml  ingress.yaml  service.yaml
k8s/: deployment.yaml
src/: api.rs  config.rs  main.rs
src/infra/: cloud.rs  kubernetes.rs  mod.rs
src/monitoring/: mod.rs
src/rollup/: mod.rs
terraform/: main.tf
